# pingMe

./: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOY.md  Makefile  README.md  env.example  package-lock.json
backend/: .gitignore  Dockerfile  PYTHONANYWHERE_DEPLOY.md  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_profile_status.py
backend/backend/: settings.py  urls.py
backend/follows/: models.py  serializers.py  tests.py  urls.py  views.py
backend/follows/migrations/: 0001_initial.py
backend/posts/: models.py  serializers.py  tests.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/complete-profile/: page.tsx
frontend/app/components/ui/: Logo.tsx
frontend/app/firsStep/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/user-created/: page.tsx
frontend/components/layout/: CenterContainer.tsx  Container.tsx  Form.tsx
frontend/components/ui/: Button.tsx  Input.tsx  Logo.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: axios.ts  slice.ts  store.ts
frontend/providers/: AppProvider.tsx
frontend/utils/: api-interfaces.ts
